--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -197,6 +197,16 @@
             app:layout_constraintBottom_toTopOf="@id/bottonNavigationviewProfileActivity"
 
             />
+
+        <ProgressBar
+            android:id="@+id/ProfileActivityProgressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
+            app:layout_constraintEnd_toEndOf="@+id/profile_image"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/profile_image" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
