--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,145 +6,164 @@
     android:layout_height="match_parent"
     tools:context=".Login.RegisterActivity">
 
-     <de.hdodenhof.circleimageview.CircleImageView
-         android:id="@+id/circleImageView"
-         android:layout_width="150dp"
-         android:layout_height="150dp"
-         android:layout_marginTop="44dp"
-         android:src="@drawable/image"
-         app:civ_border_color="@color/siyah"
-         app:civ_border_width="2dp"
-         app:layout_constraintEnd_toEndOf="parent"
-         app:layout_constraintHorizontal_bias="0.498"
-         app:layout_constraintStart_toStartOf="parent"
-         app:layout_constraintTop_toTopOf="parent" />
-
-     <TextView
-         android:id="@+id/tv_Telefon"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_marginStart="80dp"
-         android:layout_marginTop="22dp"
-         android:text="TELEFON"
-         android:textColor="@color/siyah"
-         android:textSize="20sp"
-         app:layout_constraintStart_toStartOf="parent"
-         app:layout_constraintTop_toBottomOf="@+id/circleImageView" />
-
-     <TextView
-         android:id="@+id/tv_Email"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_marginEnd="80dp"
-         android:layout_marginTop="22dp"
-         android:text="E-POSTA"
-         android:textColor="@color/siyah"
-         android:textSize="20sp"
-         app:layout_constraintEnd_toEndOf="parent"
-         app:layout_constraintTop_toBottomOf="@+id/circleImageView" />
-
-     <View
-         android:id="@+id/golgelik_Register"
-         android:layout_width="0dp"
-         android:layout_height="1dp"
-         android:layout_marginStart="47dp"
-         android:layout_marginEnd="47dp"
-         android:background="@color/golgelik"
-         app:layout_constraintEnd_toEndOf="parent"
-         app:layout_constraintStart_toStartOf="parent"
-         android:layout_marginTop="20dp"
-         app:layout_constraintTop_toBottomOf="@+id/tv_Telefon" />
-
-     <View
-         android:id="@+id/telefon_view"
-         android:layout_width="160dp"
-         android:layout_height="2dp"
-         android:visibility="visible"
-         android:background="@color/siyah"
-         app:layout_constraintEnd_toEndOf="@+id/tv_Telefon"
-         app:layout_constraintStart_toStartOf="@+id/tv_Telefon"
-         app:layout_constraintTop_toBottomOf="@+id/tv_Telefon"
-         android:layout_marginTop="20dp"/>
-
-     <View
-         android:id="@+id/Eposta_view"
-         android:layout_width="160dp"
-         android:layout_height="2dp"
-         android:visibility="invisible"
-         android:background="@color/siyah"
-         app:layout_constraintEnd_toEndOf="@+id/tv_Email"
-         app:layout_constraintStart_toStartOf="@+id/tv_Email"
-         app:layout_constraintTop_toBottomOf="@+id/tv_Email"
-         android:layout_marginTop="20dp"/>
-
-     <EditText
-         android:id="@+id/editTelefon"
-         android:layout_width="0dp"
-         android:layout_height="45dp"
-         android:layout_marginStart="16dp"
-         android:layout_marginTop="20dp"
-         android:layout_marginEnd="16dp"
-         android:background="@drawable/register_edit_text"
-         android:textSize="24sp"
-         android:inputType="number"
-         android:hint="  Telefon"
-         app:layout_constraintEnd_toEndOf="parent"
-         app:layout_constraintHorizontal_bias="0.0"
-         app:layout_constraintStart_toStartOf="parent"
-         app:layout_constraintTop_toBottomOf="@id/golgelik_Register" />
-
-     <TextView
-         android:id="@+id/register_button_ileri"
-         android:layout_width="0dp"
-         android:layout_height="45dp"
-         android:layout_marginTop="16dp"
-         android:ems="10"
-         android:inputType="textPersonName"
-         android:text="ileri"
-         android:textSize="24sp"
-         android:textAllCaps="false"
-         android:textAlignment="center"
-         android:textColor="@color/sonukmavi"
-         android:layout_marginStart="16dp"
-         android:layout_marginEnd="16dp"
-         android:enabled="false"
-         android:background="@drawable/register_button"
-         app:layout_constraintEnd_toEndOf="parent"
-         app:layout_constraintStart_toStartOf="parent"
-         app:layout_constraintTop_toBottomOf="@+id/editTelefon" />
-
-     <View
-         android:id="@+id/viewGolgelikregister"
+     <androidx.constraintlayout.widget.ConstraintLayout
+         android:id="@+id/loginRoot"
          android:layout_width="match_parent"
-         android:layout_height="2dp"
-         app:layout_constraintStart_toStartOf="parent"
-         app:layout_constraintEnd_toEndOf="parent"
-         android:background="@color/golgelik"
-         app:layout_constraintBottom_toBottomOf="parent"
-         android:layout_marginBottom="50dp"
-          />
+         android:layout_height="match_parent"
+          >
 
-     <TextView
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="Hesabın zaten var mı ?"
-         app:layout_constraintTop_toBottomOf="@id/viewGolgelikregister"
-         android:layout_marginTop="16dp"
-         app:layout_constraintStart_toStartOf="parent"
-         android:layout_marginStart="110dp"
-          />
-     <TextView
-         android:id="@+id/registerGirisYap"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="Giriş Yap"
-         android:textStyle="bold"
-         android:textSize="14sp"
-         app:layout_constraintTop_toBottomOf="@id/viewGolgelikregister"
-         android:layout_marginTop="16dp"
-         app:layout_constraintEnd_toEndOf="parent"
-         android:layout_marginEnd="75dp"
-          />
+          <de.hdodenhof.circleimageview.CircleImageView
+              android:id="@+id/circleImageView"
+              android:layout_width="150dp"
+              android:layout_height="150dp"
+              android:layout_marginTop="44dp"
+              android:src="@drawable/image"
+              app:civ_border_color="@color/siyah"
+              app:civ_border_width="2dp"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintHorizontal_bias="0.498"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toTopOf="parent" />
+
+          <TextView
+              android:id="@+id/tv_Telefon"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginStart="80dp"
+              android:layout_marginTop="22dp"
+              android:text="TELEFON"
+              android:textColor="@color/siyah"
+              android:textSize="20sp"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/circleImageView" />
+
+          <TextView
+              android:id="@+id/tv_Email"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginEnd="80dp"
+              android:layout_marginTop="22dp"
+              android:text="E-POSTA"
+
+              android:textColor="@color/siyah"
+              android:textSize="20sp"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/circleImageView" />
+
+          <View
+              android:id="@+id/golgelik_Register"
+              android:layout_width="0dp"
+              android:layout_height="1dp"
+              android:layout_marginStart="47dp"
+              android:layout_marginEnd="47dp"
+              android:background="@color/golgelik"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              android:layout_marginTop="20dp"
+              app:layout_constraintTop_toBottomOf="@+id/tv_Telefon" />
+
+          <View
+              android:id="@+id/telefon_view"
+              android:layout_width="160dp"
+              android:layout_height="2dp"
+              android:visibility="visible"
+              android:background="@color/siyah"
+              app:layout_constraintEnd_toEndOf="@+id/tv_Telefon"
+              app:layout_constraintStart_toStartOf="@+id/tv_Telefon"
+              app:layout_constraintTop_toBottomOf="@+id/tv_Telefon"
+              android:layout_marginTop="20dp"/>
+
+          <View
+              android:id="@+id/Eposta_view"
+              android:layout_width="160dp"
+              android:layout_height="2dp"
+              android:visibility="invisible"
+              android:background="@color/siyah"
+              app:layout_constraintEnd_toEndOf="@+id/tv_Email"
+              app:layout_constraintStart_toStartOf="@+id/tv_Email"
+              app:layout_constraintTop_toBottomOf="@+id/tv_Email"
+              android:layout_marginTop="20dp"/>
+
+          <EditText
+              android:id="@+id/editTelefon"
+              android:layout_width="0dp"
+              android:layout_height="45dp"
+              android:layout_marginStart="16dp"
+              android:layout_marginTop="20dp"
+              android:layout_marginEnd="16dp"
+              android:background="@drawable/register_edit_text"
+              android:textSize="24sp"
+              android:inputType="number"
+              android:hint="Telefon"
+              android:textAlignment="center"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintHorizontal_bias="0.0"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toBottomOf="@id/golgelik_Register" />
+
+          <TextView
+              android:id="@+id/register_button_ileri"
+              android:layout_width="0dp"
+              android:layout_height="45dp"
+              android:layout_marginTop="16dp"
+              android:ems="10"
+              android:inputType="textPersonName"
+              android:text="ileri"
+              android:textSize="24sp"
+              android:textAllCaps="false"
+              android:textAlignment="center"
+              android:textColor="@color/sonukmavi"
+              android:layout_marginStart="16dp"
+              android:layout_marginEnd="16dp"
+              android:enabled="false"
+              android:background="@drawable/register_button"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/editTelefon" />
+
+          <View
+              android:id="@+id/viewGolgelikregister"
+              android:layout_width="match_parent"
+              android:layout_height="2dp"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintEnd_toEndOf="parent"
+              android:background="@color/golgelik"
+              app:layout_constraintBottom_toBottomOf="parent"
+              android:layout_marginBottom="50dp"
+              />
+
+          <TextView
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Hesabın zaten var mı ?"
+              app:layout_constraintTop_toBottomOf="@id/viewGolgelikregister"
+              android:layout_marginTop="16dp"
+              app:layout_constraintStart_toStartOf="parent"
+              android:layout_marginStart="110dp"
+              />
+          <TextView
+              android:id="@+id/registerGirisYap"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Giriş Yap"
+              android:textStyle="bold"
+              android:textSize="14sp"
+              app:layout_constraintTop_toBottomOf="@id/viewGolgelikregister"
+              android:layout_marginTop="16dp"
+              app:layout_constraintEnd_toEndOf="parent"
+              android:layout_marginEnd="75dp"
+              />
+     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+     <FrameLayout
+         android:id="@+id/loginContainer"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:visibility="invisible"
+         app:layout_constraintBottom_toBottomOf="parent"
+         app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
