--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -210,6 +210,17 @@
             app:layout_constraintEnd_toEndOf="@+id/profile_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/profile_image" />
+
+        <TextView
+            android:id="@+id/web_site"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="@+id/byografi"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="309dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -217,6 +228,6 @@
         android:id="@+id/ProfileActivityContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
