--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -198,6 +198,16 @@
                 android:layout_marginTop="8dp"
                 />
 
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@+id/profile_fragment_image"
+                app:layout_constraintEnd_toEndOf="@+id/profile_fragment_image"
+                app:layout_constraintStart_toStartOf="@+id/profile_fragment_image"
+                app:layout_constraintTop_toTopOf="@+id/profile_fragment_image" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
